--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </ul>
   </nav>
   <section class="livros wrap" id="livros">
-    <div class="livro">
+    <!-- <div class="livro">
       <img class="livro__imagens" src="imagens/Cangaceiro-Javascript.png" alt="Capa do livro Cangaceiro JavaScript" />
       <h2 class="livro__titulo">
         Cangaceiro JavaScript:
@@ -261,7 +261,7 @@
         <span class="tag">Front-end</span>
         <span class="tag">Back-end</span>
       </div>
-    </div>
+    </div> -->
 
   </section>
   <section id="valor_total_livros_disponiveis">
@@ -274,6 +274,7 @@
   <footer class="rodape">
     <p>Alura - Mergulhe em tecnologia</p>
   </footer>
+  <script src="/app/main.js"></script>
 </body>
 
 </html>
