--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
   <script src="/app/metodoMap.js"></script>
   <script src="/app/metodoFilter.js"></script>
   <script src="/app/metodoSort.js"></script>
+  <script src="/app/metodoReduce.js"></script>
 </body>
 
 </html>
